--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "nps_sdk",
-    "version": "1.1.13",
-    "description": "A Node.Js SDK for Ingenico ePayments - NPS LatAm Services",
-    "keywords": [
-        "Ingenico","npssdk",
-        "payment processing",
-        "credit cards",
-        "api"
-        ],
-    "homepage": "https://github.com/Ingenico-NPS-Latam/nps-sdk-nodejs",
-    "contributors": [
-        "Ingenico <merchantservices@ingenico.com>"
-    ],
-    "repository": 
-    {
-        "type": "git",
-        "url": "https://github.com/Ingenico-NPS-Latam/nps-sdk-nodejs.git"
-    },    
-    "engines": {
-        "node": ">= v4.2.0"
-    },
-    "main": "lib/nps-sdk.js",
-    "dependencies": {
-        "soap": "0.18.0",
-        "ini": "1.3.4"
-    },
-    "license": "MIT"    
+  "name": "nps_sdk",
+  "version": "1.1.14",
+  "description": "A Node.Js SDK for Ingenico ePayments - NPS LatAm Services",
+  "keywords": [
+    "Ingenico",
+    "npssdk",
+    "payment processing",
+    "credit cards",
+    "api"
+  ],
+  "homepage": "https://github.com/Ingenico-NPS-Latam/nps-sdk-nodejs",
+  "contributors": [
+    "Ingenico <merchantservices@ingenico.com>"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ingenico-NPS-Latam/nps-sdk-nodejs.git"
+  },
+  "engines": {
+    "node": ">= v4.2.0"
+  },
+  "main": "lib/nps-sdk.js",
+  "dependencies": {
+    "ini": "1.3.4",
+    "soap": "0.18.0",
+    "xml-beautifier": "^0.3.0"
+  },
+  "license": "MIT"
 }
