--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nps_sdk",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A Node.Js SDK for Ingenico ePayments - NPS LatAm Services",
   "keywords": [
     "Ingenico",
@@ -22,8 +22,8 @@
   },
   "main": "lib/nps-sdk.js",
   "dependencies": {
-    "ini": "1.3.4",
-    "soap": "0.18.0",
+    "ini": "^2.0.0",
+    "soap": "^0.35.0",
     "winston": "^3.0.0-rc1",
     "xml-beautifier": "^0.3.0"
   },
